# Bingo

./: .gitignore  CMakeLists.txt  README.md  bingo.cpp  bingo.h  completa.cpp  diagonal.cpp  estadisticas.cpp  horizontal.cpp  sistema.cpp  vertical.cpp
